Fixed Horizontal Scrollbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,9 @@
   margin-bottom: 10%;
   background-color: #4a104a;
 }
+#home .row{
+  margin-right: 0px;
+}
 .home-img {
   margin-bottom: 10%;
   margin-left: 40%;
